# amazonforest_segmentation

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
.circleci/: config.yml
amazon_seg_project/: __init__.py  data_paths.py
amazon_seg_project/assets/: __init__.py  data_assets.py  data_products.py  dataset.py  dataset_definition.py  datasets.py  model.py  performance_metrics_test_dataset.py  performance_metrics_validation.py  precision_recall_metrics.py  statistics.py  val_dataset_metrics.py
amazon_seg_project/config/: __init__.py
amazon_seg_project/jobs/: __init__.py  compute_precision_recall_curve.py  compute_training_statistics.py  compute_training_stats.py  evaluate_test_dataset_metrics.py  evaluate_val_metrics.py  run_wandb_experiments.py  run_wandb_hyperparam_sweep.py
amazon_seg_project/ops/: __init__.py  aug_utils.py  data_utils.py  file_naming_conventions.py  image_processing_utils.py  loss_functions.py  metrics.py  model_checks.py  plotting_utils.py  s3_utils.py  scaling_utils.py  tif_utils.py  torch_utils.py  train_unet.py  wandb_artifact_utils.py  wandb_utils.py  write_files.py
amazon_seg_project/resources/: __init__.py
amazon_seg_project/scripts/: aws_credentials.py  constants.py  s3_utils.py  (+2 more)
amazon_seg_project_tests/: test_aws_credentials.py  test_s3_utils.py  test_tif_utils.py
dagster_jobs/: compute_training_stats.py  run_wandb_experiment.py
executables/: compute_test_dataset_metrics.py  compute_training_stats.py  compute_val_metrics.py  compute_val_precision_recall_curve.py  run_wandb_experiment.py  run_wandb_sweep.py
(+42 files in other folders)
